<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >	
    
    <ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >	
	<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/input_screen_title"
    android:gravity="center"
    android:textStyle="bold"
    android:textColor="#ff0000"    
    />    
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">    
    <TableRow>
        <TextView
        android:id="@+id/district_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dist_lbl"
        android:padding="8dip"/>
    	<EditText
        android:id="@+id/district_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>   
    </TableRow>
    <TableRow>
        <TextView
        android:id="@+id/taluk_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taluk_lbl"
        android:padding="8dip"/>
    <EditText
        android:id="@+id/taluk_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>   
    </TableRow>   
    </TableLayout>    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/app_si_no_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_app_si_no_lbl"/>
    <EditText
        android:id="@+id/app_si_no_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/app_si_no_label"/>
    </RelativeLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
     <TextView
        android:id="@+id/or_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_lbl"
        android:gravity="center"
        android:textStyle="bold"
    	android:textColor="#ff0000"/>
    </LinearLayout>
   <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
     <Button 
     	android:id="@+id/view_btn"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/view_btn_lbl" 
    	android:padding="8dip"   	
    	android:layout_alignParentRight="true"/>  
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/app_sub_si_no_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_app_sub_si_no_lbl"/>
    <EditText
        android:id="@+id/app_sub_si_no_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/app_sub_si_no_label"/>
    </RelativeLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
     <TextView
        android:id="@+id/and_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/and_lbl"
        android:gravity="center"
        android:textStyle="bold"
    	android:textColor="#ff0000"/>
    </LinearLayout>    
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">    
    <TableRow>
        <TextView
        android:id="@+id/scheme_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme_lbl"
        android:padding="8dip"/>
    	<EditText
        android:id="@+id/scheme_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>   
    </TableRow>

    <TableRow>
        <TextView
        android:id="@+id/series_year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/series_lbl"
        android:padding="8dip"/>
    <EditText
        android:id="@+id/series_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>   
    </TableRow>
    
    <TableRow>
        <TextView
        android:id="@+id/hobli_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobli_lbl"
        android:padding="8dip"/>
    	<EditText
        android:id="@+id/hobli_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>   
    </TableRow>

    <TableRow>
        <TextView
        android:id="@+id/village_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/village_lbl"
        android:padding="8dip"/>
    <EditText
        android:id="@+id/village_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"/>   
    </TableRow>       
    </TableLayout>
    
     <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
     <Button 
     	android:id="@+id/update_btn"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/update_btn_lbl" 
    	android:padding="8dip"   	
    	android:layout_alignParentRight="true"/>  
    </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
